--- a/projects/admin/src/app/app.component.html
+++ b/projects/admin/src/app/app.component.html
@@ -1,24 +1,6 @@
-<nav class=" navbar navbar-expand-lg navbar-light">
-  <div class="container">
-    <div class="navbar-brand" >Tasks</div>
 
-    <div class="collapse  navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/tasks" routerLinkActive="active">All-Tasks <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/users"  routerLinkActive="active">Users</a>
-        </li>
-      </ul>
-     <div class="nav-item">
-      <a class="nav-link" routerLink="/login">Logout</a>
-     </div>
-    </div>
-  </div>
-
-</nav>
 
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "large" color = "#a43333" type = "line-spin-fade" [fullScreen] = "true"><p style="color: white" > loading </p></ngx-spinner>
