--- a/projects/admin/src/app/dashboard/tasks-admin/components/list-tasks/list-tasks.component.html
+++ b/projects/admin/src/app/dashboard/tasks-admin/components/list-tasks/list-tasks.component.html
@@ -68,9 +68,9 @@
           </ng-container>
         
           <!-- DeadLine Date Column -->
-          <ng-container matColumnDef="deadLineDate">
+          <ng-container matColumnDef="deadline">
               <th mat-header-cell *matHeaderCellDef class="column-header">DeadLine Date</th>
-              <td mat-cell *matCellDef="let element" class="column-data">{{element.deadLineDate}}</td>
+              <td mat-cell *matCellDef="let element" class="column-data">{{element.deadline}}</td>
           </ng-container>
           
           <!-- Status Column -->
