--- a/projects/admin/src/app/dashboard/tasks-admin/components/add-task/add-task.component.html
+++ b/projects/admin/src/app/dashboard/tasks-admin/components/add-task/add-task.component.html
@@ -17,16 +17,12 @@
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>User</mat-label>
                     <mat-select formControlName="userId">
-                        <mat-option *ngFor="let user of users" [value]="user?.id">
-                          {{user?.name}}
-                        </mat-option>
+                        <mat-option *ngFor="let user of users" [value]="user?.id">{{user?.name}}</mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
             <div class="col-md-12 mb-3">
-                <label for="selectfile" class="btn btn-primary">Select Image</label>
-                <!-- <span class="ml-2">{{fileName}}</span>-->
-                
+                <label for="selectfile" class="btn btn-primary">Select Image</label>                
                 <input type="file" id="selectfile" (change)="selectImage($event)" hidden class="form-control">
             </div>
             <div class="col-md-12 mb-3">
